--- a/css/internet.css
+++ b/css/internet.css
@@ -363,9 +363,10 @@ body{
 		  font-size: 0.8em;
 	  }
  	.display{
- 		margin-left: 1.2vw !important;
+ 		margin-left: 1vw !important;
  		width: 4.8em !important;
-		padding-left: 1em !important;
+		padding-right: 1em !important;
+		margin-right: 1vw !important;
 		overflow-x: hidden;
  	}
  	.homepage{
@@ -379,12 +380,12 @@ body{
 		padding-right: 1.5em;
 	  }
 	  .img-right{
-		  height: 30vh !important;
-                  width: 52vw !important;
+		  height: 25vh !important;
+                  width: 30vw !important;
 	  }
 	   .img-left{
-		  height: 30vh !important;
-                  width: 52vw !important;
+		  height: 25vh !important;
+                  width: 30vw !important;
 	  }
 	  body{
 		  overflow-x: hidden;
