--- a/css/internet.css
+++ b/css/internet.css
@@ -368,7 +368,7 @@ body{
  		margin-left: 1vw !important;
 		margin-right: 1vw !important;
 		background-color: rgba(0, 0, 0, 0);
-		colo: #000000;
+		color: #000000;
  	}
  	.homepage{
  		padding-bottom: 8em;
