--- a/css/internet.css
+++ b/css/internet.css
@@ -270,7 +270,7 @@ body{
  		font-size: 2em;
  	}
  }
- @media (max-width: 750px){
+ @media (max-width: 800px){
  	.display{
  		margin-left: 20vw;
  	}
@@ -348,7 +348,7 @@ body{
 		display: block;
 	}
 }
- @media (max-width: 610px){
+ /* @media (max-width: 610px){
  	.display{
  		margin-left: 10vw;
  		padding-bottom: 4.2em;
@@ -357,8 +357,8 @@ body{
  	.homepage{
  		padding-bottom: 9em;
  	}	
- }
-  @media (max-width: 470px){
+ } */
+  @media (max-width: 670px){
 	  body{
 		  font-size: 0.8em;
 	  }
